--- a/Memories.html
+++ b/Memories.html
@@ -103,7 +103,7 @@
                   2021-09-03
               </div>
               <div class="ly-txt34">
-                 <p>没啥意义，就是想来一句美女贴贴🥰</p>
+                 <p>没啥意思，就是想来一句美女贴贴🥰</p>
               </div>
               <div class="ly-imgbox31">
                 <img class="ly-img31" src="img/3.jpg">
@@ -112,213 +112,7 @@
           <div class="ly-triangle32"></div>
       </div>
 
-  <!--第五屏-->
-  <div class="section">
-          <div class="timeline"></div>
-          <div class="timepoint21"></div>
-          <div class="ly-box52">
-              <div class="ly-txt21">
-                  2015-01-01
-              </div>
-              <div class="ly-txt22">
-                 <p>XXXXXXXXXXXXXX</p>
-				         <p>XXXXXXXXXXXXXX</p>
-              </div>
-              <div class="ly-imgbox21">
-                <img class="ly-img21" src="img/1.jpg">
-              </div>
-          </div>
-          <div class="ly-triangle21"></div>
 
-          <div class="ly-box22">
-              <div class="ly-txt23">
-                  201X-0X-1X
-              </div>
-              <div class="ly-txt51">
-                  <p>XXXXXXXXXXXXXX</p>
-				          <p>XXXXXXXXXXXXXX</p>
-              </div>
-              <div class="ly-imgbox22">
-                <img class="ly-img22" src="img/1.png">
-              </div>
-          </div>
-          <div class="ly-triangle22"></div>
-
-           <div class="ly-box51">
-              <div class="ly-txt25">
-                  201X-0X-1X
-              </div>
-              <div class="ly-txt26">
-                  <p>XXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-              </div>
-              <div class="ly-imgbox23">
-                <img class="ly-img23" src="img/1.jpg">
-              </div>
-          </div>
-          <div class="ly-triangle23"></div>
-      </div>
-
-  <!--第六屏-->
-  <div class="section">
-          <div class="timeline"></div>
-          <div class="timepoint21"></div>
-          <div class="ly-box21">
-              <div class="ly-txt21">
-                  201X-0X-1X
-              </div>
-              <div class="ly-txt22">
-                 <p>XXXXXXXXXX</p>
-                 <p>XXXXXXXXXX</p>
-                 <p>XXXXXXXXXX</p>
-                 <p>XXXXXXXXXX</p>
-                 <p>XXXXXXXXXX</p>
-              </div>
-              <div class="ly-imgbox21">
-                <img class="ly-img21" src="img/1.png">
-              </div>
-          </div>
-          <div class="ly-triangle21"></div>
-
-          <div class="ly-box22">
-              <div class="ly-txt23">
-                  201X-0X-2X
-              </div>
-              <div class="ly-txt24">
-                  <p>XXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXX</p>
-              </div>
-              <div class="ly-imgbox22">
-                <img class="ly-img22" src="img/1.png">
-              </div>
-          </div>
-          <div class="ly-triangle22"></div>
-
-           <div class="ly-box23">
-              <div class="ly-txt25">
-                  201X-0X-2X
-              </div>
-              <div class="ly-txt61">
-                  <p class="wwww1">XXXXXXXXXXXXXXXXXXXXXX</p>
-                  <p class="wwww1">XXXXXXXXXXXXXXXXXXXXXX</p>
-                  <p class="wwww1">XXXXXXXXXXXXXXXXXXXXXX</p>
-                  <p class="wwww1">XXXXXXXXXXXXXXXXXXXXXX</p>
-                  <p class="wwww1">XXXXXXXXXXXXXXXXXXXXXX</p>
-				          <p class="wwww1" style="display:none;">你想要的，我能给的，我都会给你。</p>
-              </div>
-              <div class="ly-imgbox61">
-                <img class="ly-img61" src="img/1.jpg">
-              </div>
-          </div>
-          <div class="ly-triangle23"></div>
-      </div>
-
-      <!--第七屏-->
-      <div class="section">
-          <div class="timeline"></div>
-          <div class="timepoint71"></div>
-          <div class="ly-box21 xx71">
-              <div class="ly-txt21">
-                  201X-0X-3X
-              </div>
-              <div class="ly-txt22">
-                 <p>XXXXXXXXXXXXXX</p>
-                 <p>XXXXXXXXXXXXXX</p>
-                 <p>XXXXXXXXXXXXXX</p>
-                 <p>XXXXXXXXXXXXXX</p>
-                 <p>XXXXXXXXXXXXXX</p>
-              </div>
-              <div class="ly-imgbox21">
-                <img class="ly-img21" src="img/1.png">
-              </div>
-          </div>
-          <div class="ly-triangle21 xx72"></div>
-
-          <div class="ly-box71">
-              <div class="ly-txt23">
-                  201X-0X-0X
-              </div>
-              <div class="ly-txt71">
-                  <p>XXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXX</p>
-              </div>
-              <div class="ly-imgbox71">
-                <img class="ly-img71" src="img/1.jpg">
-              </div>
-          </div>
-          <div class="ly-triangle22"></div>
-
-           <div class="ly-box72">
-              <div class="ly-txt25">
-                  201X-0X-1X
-              </div>
-              <div class="ly-txt72">
-                  <p>XXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXX</p>
-              </div>
-              <div class="ly-imgbox72">
-                <img class="ly-img72" src="img/1.jpg">
-              </div>
-          </div>
-          <div class="ly-triangle71"></div>
-
-          <div class="ly-box73">
-              <div class="ly-txt25">
-                  201X-0X-1X
-              </div>
-              <div class="ly-txt73">
-                  <p>XXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXX</p>
-              </div>
-              <div class="ly-imgbox73">
-                <img class="ly-img73" src="img/1.jpg">
-              </div>
-          </div>
-          <div class="ly-triangle72"></div>
-      </div>
-
-      <!--第八屏-->
-
-      <div class="section">
-          <div class="timeline"></div>
-          <div class="timepoint11"></div>
-          <div class="ly-box81">
-              <div class="ly-txt11">
-                  201X-0X-1X
-              </div>
-              <div class="ly-txt82">
-                  <p>XXXXXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXXXXX</p>
-              </div>
-              <div class="ly-imgbox81">
-                <img class="ly-img81" src="img/1.png">
-              </div>
-          </div>
-          <div class="ly-triangle11"></div>
-
-          <div class="ly-box82">
-              <div class="ly-txt13">
-                  2015-06-18
-              </div>
-              <div class="ly-txt84">
-                 <p class="wwww1">XXXXXXXXXXXXXXXXXX</p>
-                 <p class="wwww1">XXXXXXXXXXXXXXXXXX</p>
-                 <p class="wwww1">XXXXXXXXXXXXXXXXXX</p>
-                 <p class="wwww1">XXXXXXXXXXXXXXXXXX</p>
-                 <p class="wwww1">XXXXXXXXXXXXXXXXXX</p>
-                 <p class="wwww1">XXXXXXXXXXXXXXXXXX</p>
-                 <p class="wwww1">XXXXXXXXXXXXXXXXXX</p>
-              </div>
-          </div>
-          <div class="ly-triangle82"></div>
-      </div>
 
       <!--第九屏-->
 
@@ -327,60 +121,58 @@
           <div class="timepoint91"></div>
           <div class="ly-box21 xx91">
               <div class="ly-txt21">
-                  201X-0X-2X
+                  2021-12-08
               </div>
               <div class="ly-txt90">
-                 <p>XXXXXXXXXXXXXX</p>
-                 <p>XXXXXXXXXXXXXX</p>
-                 <p>XXXXXXXXXXXXXX</p>
+                 <p>我的生日～～～～</p>
+
               </div>
               <div class="ly-imgbox21 xx94">
-                <img class="ly-img21" src="img/1.jpg">
+                <img class="ly-img21" src="img/1208.jpg">
               </div>
           </div>
           <div class="ly-triangle21 xx92"></div>
 
           <div class="ly-box91">
               <div class="ly-txt23">
-                  201X-0X-2X
+                  2021-12-18
               </div>
               <div class="ly-txt91">
-                  <p>XXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXX</p>
+                  <p>咱们第一次看物料</p>
+                  <p>以同步又好像不同步的速度</p>
+                  <p>激动地敲着手机看了两个小时</p>
               </div>
               <div class="ly-imgbox91">
-                <img class="ly-img91" src="img/1.jpg">
+                <img class="ly-img91" src="img/1218.jpg">
               </div>
           </div>
           <div class="ly-triangle22 xx92"></div>
 
            <div class="ly-box92">
               <div class="ly-txt25">
-                  201X-0X-2X
+                  2021-12-25
               </div>
               <div class="ly-txt92">
-                  <p>XXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXX</p>
+                  <p>圣诞节🎄～</p>
+                  <p>Merry Christmas!</p>
               </div>
               <div class="ly-imgbox92">
-                <img class="ly-img92" src="img/1.jpg">
+                <img class="ly-img92" src="img/1225.jpg">
               </div>
           </div>
           <div class="ly-triangle91"></div>
 
           <div class="ly-box93">
               <div class="ly-txt25">
-                  201X-0X-2X
+                  2022-01-01
               </div>
               <div class="ly-txt93">
-                  <p>XXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXX</p>
-                  <p>XXXXXXXXXXXXXX</p>
+                  <p>跨年了跨年了跨年了！</p>
+                  <p>我一度以为你生日是1/1</p>
+                  <p>然后发现记少了个1</p>
               </div>
               <div class="ly-imgbox93">
-                <img class="ly-img93" src="img/1.jpg">
+                <img class="ly-img93" src="img/0101.jpg">
               </div>
           </div>
           <div class="ly-triangle92"></div>
@@ -392,31 +184,44 @@
           <div class="timepoint11"></div>
           <div class="ly-box81">
               <div class="ly-txt11">
-                  201X-0X-0X
+                  2022-01-11
               </div>
               <div class="ly-txt82" style="top:8%">
-                  <p class="wwww1">XXXXXXXXXXXXXXXXXXX</p>
-                  <p class="wwww1">XXXXXXXXXXXXXXXXXXX</p>
-                  <p class="wwww1">XXXXXXXXXXXXXXXXXXX</p>
+                  <p class="wwww1">这是我陪你度过的第一个</p>
+                  <p class="wwww1">生日</p>
+                  <p class="wwww1">肯定也不是唯一一个啦</p>
+                  <p class="wwww1">以后还会有好多个好多个</p>
+                  <p class="wwww1">我祝你所有的希望都能如愿, </p>
+                  <p class="wwww1">所有的梦想都能实现!</p>
+                  <p class="wwww1">未来很长，</p>
+                  <p class="wwww1">愿你在未来顺顺利利，</p>
+                  <p class="wwww1">愿所有美好都如期而至!</p>
+
               </div>
               <div class="ly-imgbox81">
-                <img class="ly-img81" src="img/1.jpg">
+                <img class="ly-img81" src="img/10.jpg">
               </div>
           </div>
           <div class="ly-triangle11"></div>
 
           <div class="ly-box82">
               <div class="ly-txt13">
-                  201X-0X-1X
+                  最后的最后
               </div>
               <div class="ly-txt84">
-                 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-                 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-                 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-                 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-                 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-                 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-                 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+                 <p>虽然，咱只是网友，但是这份友谊对我来说很深刻</p>
+                 <p>如果没有你来跟我搭话的话，我们的聊天也不会坚持到那么久</p>
+                 <p>我朋友真的很少，少到一只手都能数得过来</p>
+                 <p>每一次认识的人我都真心的当朋友来看待</p>
+                 <p>可惜，友情很难持久，特别在国外，一年都难</p>
+                 <p>所以我老珍惜了!</p>
+                 <p>我们的聊天从礼貌友好到现在逐渐放飞自我</p>
+                 <p>咱也度过了不少节日，以后也还会有很多次！</p>
+                 <p>感谢小时让我遇见你</p>
+                 <p>希望也期待见到你的那一天</p>
+                 <p>咱们去看一场他们的演唱会，去参加场线下</p>
+                 <p>瞬间就圆梦了！</p><br>
+                 <p>MAY ALL YOUR WISHES COME TRUE</p>
               </div>
           </div>
           <div class="ly-triangle82"></div>
@@ -425,20 +230,22 @@
        </div>
   <!--动态方块-->
   <ul class="bg-bubbles">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><img src="img/a1.jpg" style="width:100%;height:100%"></li>
+      <li><img src="img/a2.jpg" style="width:100%;height:100%"></li>
+      <li><img src="img/a3.jpg" style="width:100%;height:100%"></li>
+      <li><img src="img/a4.jpg" style="width:100%;height:100%"></li>
+      <li><img src="img/a5.jpg" style="width:100%;height:100%"></li>
+      <li><img src="img/a6.jpg" style="width:100%;height:100%"></li>
+      <li><img src="img/a7.jpg" style="width:100%;height:100%"></li>
+      <li><img src="img/a8.jpg" style="width:100%;height:100%"></li>
+      <li><img src="img/a9.jpg" style="width:100%;height:100%"></li>
+      <li><img src="img/a10.jpg" style="width:100%;height:100%"></li>
     </ul>
 
   </div>
   <!-- <audio muted src="music/1.mp3" autoplay="autoplay" loop="loop"></audio> -->
+  <audio src="music/2.mp3" autoplay="true" loop="true"></audio>
+
 
 <script src="js/jquery-2.1.1.min.js"></script>
 <script src="js/jquery.fullPage.min.js"></script>
