--- a/index.html
+++ b/index.html
@@ -20,30 +20,22 @@
 			</form>
 		</div>
 		<ul class="bg-bubbles">
-			<li><img src="img/1zj1.gif" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj2.gif" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj1.jpg" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj1.gif" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj2.gif" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj1.jpg" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj1.gif" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj2.gif" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj1.jpg" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj1.gif" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj2.gif" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj1.jpg" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj1.gif" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj2.gif" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj1.jpg" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj1.gif" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj2.gif" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj1.jpg" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj1.gif" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj2.gif" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj1.jpg" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj1.gif" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj2.gif" style="width:100%;height:100%"></li>
-			<li><img src="img/1zj1.jpg" style="width:100%;height:100%"></li>
+			<li><img src="img/zj1.gif" style="width:100%;height:100%"></li>
+			<li><img src="img/zj2.gif" style="width:100%;height:100%"></li>
+			<li><img src="img/zj1.jpg" style="width:100%;height:100%"></li>
+			<li><img src="img/zj1.gif" style="width:100%;height:100%"></li>
+			<li><img src="img/zj2.gif" style="width:100%;height:100%"></li>
+			<li><img src="img/zj1.jpg" style="width:100%;height:100%"></li>
+			<li><img src="img/zj1.gif" style="width:100%;height:100%"></li>
+			<li><img src="img/zj2.gif" style="width:100%;height:100%"></li>
+			<li><img src="img/zj1.jpg" style="width:100%;height:100%"></li>
+			<li><img src="img/zj1.gif" style="width:100%;height:100%"></li>
+			<li><img src="img/zj2.gif" style="width:100%;height:100%"></li>
+			<li><img src="img/zj1.jpg" style="width:100%;height:100%"></li>
+			<li><img src="img/zj1.gif" style="width:100%;height:100%"></li>
+			<li><img src="img/zj2.gif" style="width:100%;height:100%"></li>
+			<li><img src="img/zj1.jpg" style="width:100%;height:100%"></li>
+			<li><img src="img/zj1.gif" style="width:100%;height:100%"></li>
 		</ul>
 	</div>
 </div>
