--- a/Memories.html
+++ b/Memories.html
@@ -56,17 +56,17 @@
                 咳咳，悄悄话哦🤫
               </div>
               <div class="ly-txt14">
-                <p>我发帖子的时候，回私信的时候，跟你刚开始聊天的时候</p>
-                <p>本社恐表示，真的有在心跳加速，打字手抖🤣</p>
-                <p>虽说那么害怕，但是还是又菜又爱玩，想找友友耍</p>
-                <p>想当初认识的几个粉丝友友都是偏1356</p>
-                <p>我就想找找有没有人陪我聊聊别的孩子</p>
-                <p>所以我看到你的介绍的时候真的hin心动！</p>
-                <p>咱加了好友之后，你给我说你才15岁的时候</p>
-                <p>咱就是一个大震惊的动作🤯</p>
-                <p>毕竟在你之前，我认识的最小年龄的人也才03</p>
-                <p>然后……然后……明明你比我还小昂……</p>
-                <p>结果我更像小孩子！😵‍💫</p>
+                <p>我发帖子的时候，回私信的时候，跟你刚开始聊天的时候，
+                本社恐表示，真的有在心跳加速，打字手抖😂
+                虽说那么害怕，但是还是又菜又爱玩，想找友友耍。
+                想当初认识的几个粉丝友友都是偏1356，
+                我就想找找有没有人陪我聊聊别的孩子，
+                所以我看到你的介绍的时候真的hin心动！
+                咱加了好友之后，你给我说你才15岁的时候，
+                咱就是一个大震惊的动作🤯
+                毕竟在你之前，我认识的最小年龄的人也才03
+                然后……然后……明明你比我还小昂……
+                结果我更像小孩子！😵‍💫</p>
               </div>
           </div>
           <div class="ly-triangle12"></div>
