--- a/BirthdayCake.html
+++ b/BirthdayCake.html
@@ -187,7 +187,7 @@
 	<a href="javascript:;" class="lk1">
         <div class="link2">
             <div class="bt1" id="dislike">
-                我就不
+                我偏不
             </div>
         </div>
 	</a>
