--- a/BirthdayCake.html
+++ b/BirthdayCake.html
@@ -197,12 +197,12 @@
     <li><img src="img/dcx2.gif" style="width:100%;height:100%"></li>
     <li><img src="img/dcx3.gif" style="width:100%;height:100%"></li>
     <li><img src="img/35.jpg" style="width:100%;height:100%"></li>
-    <li><img src="img/a9.gif" style="width:100%;height:100%"></li>
+    <li><img src="img/a9.jpg" style="width:100%;height:100%"></li>
     <li><img src="img/dcx3.gif" style="width:100%;height:100%"></li>
     <li><img src="img/dcx1.gif" style="width:100%;height:100%"></li>
     <li><img src="img/dcx2.gif" style="width:100%;height:100%"></li>
-    <li><img src="img/a9.gif" style="width:100%;height:100%"></li>
-    <li><img src="img/35.gif" style="width:100%;height:100%"></li>
+    <li><img src="img/a9.jpg" style="width:100%;height:100%"></li>
+    <li><img src="img/35.jpg" style="width:100%;height:100%"></li>
 </ul>
 
 <div class="bubbles">
