--- a/Memories.html
+++ b/Memories.html
@@ -219,7 +219,10 @@
                  <p>感谢小时让我遇见你</p>
                  <p>希望也期待见到你的那一天</p>
                  <p>咱们去看一场他们的演唱会，去参加场线下</p>
-                 <p>瞬间就圆梦了！</p><br>
+                 <p>瞬间就圆梦了！</p>
+		 <p>最后说句老话，管她几岁，开心万岁！</P>
+		  <p>I hope your celebration gives you many happy memories!</p>
+		  <p>Wherever the year ahead takes you, I hope it's happy.</p>
                  <p>MAY ALL YOUR WISHES COME TRUE</p>
               </div>
           </div>
