--- a/Memories.html
+++ b/Memories.html
@@ -138,8 +138,7 @@
               </div>
               <div class="ly-txt91">
                   <p>咱们第一次看物料</p>
-                  <p>以同步又好像不同步的速度</p>
-                  <p>激动地敲着手机看了两个小时</p>
+                  <p>以同步又好像不同步的速度激动地敲着手机看了两个小时</p>
               </div>
               <div class="ly-imgbox91">
                 <img class="ly-img91" src="img/1218.jpg">
